[package]
name = "tetra-bluestation"
version = "0.2.5"
edition = "2024"

[[bin]]
name = "tetra-bluestation"
path = "src/main.rs"

[[bin]]
name = "tool"
path = "src/tool.rs"

[dependencies]
as-any = "0.3.2"
num = "0.4.3"
num-complex = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rustfft = "6.4.0"
soapysdr = "0.4.4"
rand = "0.9.2"
clap = { version = "4.5.53", features = ["derive"] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2.4"
crossbeam-channel = "0.5"
