[workspace]
resolver = "2"

members = [
    # Core libraries
    "crates/tetra-core",
    "crates/tetra-saps",
    "crates/tetra-config",
    "crates/tetra-pdus",
    "crates/tetra-entities",
    
    # Binaries
    "bins/bluestation-bs",
    "bins/pdu-tool",
    "bins/net-tnmm-test",
    "bins/net-tnmm-test-quic"
]

[workspace.package]
version = "0.3.4"
edition = "2024"
authors = ["Wouter Bokslag / Midnight Blue"]
license = "MIT"

[workspace.dependencies]
# Internal crates
tetra-core = { path = "crates/tetra-core" }
tetra-config = { path = "crates/tetra-config" }
tetra-saps = { path = "crates/tetra-saps" }
tetra-pdus = { path = "crates/tetra-pdus" }
tetra-entities = { path = "crates/tetra-entities" }

# External dependencies
as-any = "0.3.2"
num = "0.4.3"
num-complex = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rustfft = "6.4.0"
soapysdr = "0.4.4"
rand = "0.9.2"
clap = { version = "4.5.53", features = ["derive"] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2.4"
crossbeam-channel = "0.5"
