[package]
name = "net-tnmm-test-quic"
version.workspace = true
edition.workspace = true

[[bin]]
name = "net-tnmm-test-quic"
path = "src/net_tnmm_test_quic_service.rs"

[dependencies]
tetra-entities = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.13"
tracing = { workspace = true }
tracing-subscriber = "0.3"
