[package]
name = "net-tnmm-test"
version.workspace = true
edition.workspace = true

[[bin]]
name = "net-tnmm-test"
path = "src/net_tnmm_test_service.rs"

[dependencies]
tetra-core = { workspace = true }
tetra-config = { workspace = true }
tetra-saps = { workspace = true }
tetra-pdus = { workspace = true }
tetra-entities = { workspace = true }

clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
