[package]
name = "pdu-tool"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pdu-tool"
path = "src/main.rs"

[dependencies]
tetra-core = { workspace = true }
tetra-config = { workspace = true }
tetra-saps = { workspace = true }
tetra-pdus = { workspace = true }

clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
