[package]
name = "tetra-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
git-version = "0.3.9"
const_format = "0.2.35"
# as-any = { workspace = true }
