[package]
name = "tetra-entities"
version.workspace = true
edition.workspace = true

[dependencies]
tetra-core = { workspace = true }
tetra-config = { workspace = true }
tetra-saps = { workspace = true }
tetra-pdus = { workspace = true }
as-any = { workspace = true }
num = { workspace = true }
num-complex = { workspace = true }
rustfft = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
soapysdr = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcode = "0.6.9"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-native-certs = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"] }
